set02/problem01_debug
PS C:\Users\Lenovo\PSC\c-activity-sets> cd
PS C:\Users\Lenovo\PSC\c-activity-sets> cd set01
PS C:\Users\Lenovo\PSC\c-activity-sets\set01> gcc problem01.c
problem01.c:2:19: warning: extra tokens at end of #include directive
 #include <stdio.h>>
                   ^
problem01.c: In function 'main':
problem01.c:6:5: error: expected declaration or statement at end of input
     return 0;
     ^~~~~~
PS C:\Users\Lenovo\PSC\c-activity-sets\set01> .\a.exe
Enter your first Numbr:2 
enter the second Number:4
6
PS C:\Users\Lenovo\PSC\c-activity-sets\set01> git add .
PS C:\Users\Lenovo\PSC\c-activity-sets\set01> git commit -"test"
fatal: could not read 'set01/est': No such file or directory
PS C:\Users\Lenovo\PSC\c-activity-sets\set01> git pull
remote: Enumerating objects: 6, done.
remote: Counting objects: 100% (6/6), done.
remote: Compressing objects: 100% (4/4), done.
remote: Total 4 (delta 2), reused 0 (delta 0), pack-reused 0
Unpacking objects: 100% (4/4), 1.90 KiB | 49.00 KiB/s, done.
From https://github.com/ammushreenaidu/c-activity-sets
   821bafe..6377e1d  main       -> origin/main
Updating 821bafe..6377e1d
Fast-forward
 set02/problem02_debug | 47 +++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 47 insertions(+)
 create mode 100644 set02/problem02_debug
PS C:\Users\Lenovo\PSC\c-activity-sets\set01> git push
Everything up-to-date
PS C:\Users\Lenovo\PSC\c-activity-sets\set01> gdb .\a.exe
GNU gdb (GDB) 7.6.1
Copyright (C) 2013 Free Software Foundation, Inc.
License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>
This is free software: you are free to change and redistribute it.
There is NO WARRANTY, to the extent permitted by law.  Type "show copying"
and "show warranty" for details.
This GDB was configured as "mingw32".
For bug reporting instructions, please see:
<http://www.gnu.org/software/gdb/bugs/>...
Reading symbols from C:\Users\Lenovo\PSC\c-activity-sets\set01\a.exe...done.
(gdb) b 6
Breakpoint 1 at 0x402070: file ../../../src/gcc-6.3.0/libgcc/config/i386/cygwin.S, line 6.
(gdb) r
Starting program: C:\Users\Lenovo\PSC\c-activity-sets\set01/.\a.exe
[New Thread 4016.0x8458]
[New Thread 4016.0x2e08]
[New Thread 4016.0x3e38]
[New Thread 4016.0x98f0]

Breakpoint 1, __chkstk_ms () at ../../../src/gcc-6.3.0/libgcc/config/i386/cygwin.S:163
163     ../../../src/gcc-6.3.0/libgcc/config/i386/cygwin.S: No such file or directory.
(i-search)`': 
